[package]
name = "drcom4scut"
version = "0.3.0"
authors = ["SeaLoong <sealoongw@foxmail.com>"]
edition = "2021"
description = "A 3rd-party Drcom client for SCUT."
license = "GPL-3.0-or-later"
readme = "README.md"

[dependencies]
bytes = "1.4.0"
chrono = "0.4.24"
clap = { version = "4.2", features = ["cargo"] }
crossbeam-channel = "0.5"
encoding_rs = "0.8"
hex = "0.4"
hostname = "0.3"
log = "0.4"
md-5 = "0.10"
rand = "0.8"
trust-dns-resolver = "0.23"

[dependencies.config]
version = "0.14"
default-features = false
features = ["yaml"]

[dependencies.log4rs]
version = "1.3"
features = ["gzip"]
optional = true

[dependencies.pnet]
version = "0.34"
features = ["std"]

[profile.release-opt]
inherits = "release"
opt-level = 3
lto = true

[profile.release-min]
inherits = "release"
opt-level = 3
lto = true
panic = "abort"
strip = true

[features]
default = ["log4rs"]
